<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/tvID3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1" />

    <EditText
        android:id="@+id/etContentSongtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvID2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2" />

    <EditText
        android:id="@+id/etContentSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title3" />

    <EditText
        android:id="@+id/etContentYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|textPersonName" />

    <TextView
        android:id="@+id/tvID4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title4" />

    <Spinner
        android:id="@+id/rating_spinner_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rating_array" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BtnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/BtnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn5" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn8" />

</LinearLayout>